--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "laravel/jetstream": "^4.2",
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8",
+    "laraveles/spanish": "^1.5",
     "livewire/livewire": "^3.0",
     "spatie/laravel-permission": "^6.3"
   },
