--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
   "license": "MIT",
   "require": {
     "php": "^8.1",
+    "barryvdh/laravel-dompdf": "^2.1",
     "guzzlehttp/guzzle": "^7.2",
+    "josantonius/mime-type": "^2.0",
     "laravel/framework": "^10.39",
     "laravel/jetstream": "^4.2",
     "laravel/sanctum": "^3.2",
