Reverb + Cambios UI Omnichannel

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,9 @@
     "barryvdh/laravel-dompdf": "^2.1",
     "guzzlehttp/guzzle": "^7.2",
     "josantonius/mime-type": "^2.0",
-    "laravel/framework": "^10.39",
+    "laravel/framework": "^10.47",
     "laravel/jetstream": "^4.2",
+    "laravel/reverb": "@beta",
     "laravel/sanctum": "^3.2",
     "laravel/tinker": "^2.8",
     "laraveles/spanish": "^1.5",
