--- a/package.json
+++ b/package.json
@@ -23,15 +23,17 @@
     "browser-sync": "2.29.3",
     "browser-sync-webpack-plugin": "2.3.0",
     "cross-env": "7.0.3",
-    "glob": "10.3.10",
     "eslint": "8.56.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "eslint-plugin-prettier": "5.1.3",
+    "glob": "10.3.10",
+    "laravel-echo": "^1.16.1",
     "lodash": "4.17.21",
     "postcss": "8.4.33",
     "prettier": "3.2.2",
+    "pusher-js": "^8.4.0-rc2",
     "resolve-url-loader": "5.0.0",
     "sass": "1.69.7",
     "sass-loader": "14.0.0",
@@ -165,4 +167,3 @@
     "typeahead.js": "0.11.1"
   }
 }
-
