--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "laravel/tinker": "^2.8",
     "laraveles/spanish": "^1.5",
     "livewire/livewire": "^3.0",
-    "mercadopago/dx-php": "2.6.2",
+    "mercadopago/dx-php": "^3.0",
     "spatie/laravel-permission": "^6.3",
     "yajra/laravel-datatables-oracle": "^10.11"
   },
