--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
     "laravel/tinker": "^2.8",
     "laraveles/spanish": "^1.5",
     "livewire/livewire": "^3.0",
-    "mercadopago/dx-php": "^3.0",
+    "mercadopago/dx-php": "2.6.2",
     "spatie/laravel-permission": "^6.3",
+    "spatie/laravel-sluggable": "^3.6",
     "yajra/laravel-datatables-oracle": "^10.11"
   },
   "require-dev": {
