--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
     "laravel/jetstream": "^4.2",
     "laravel/reverb": "@beta",
     "laravel/sanctum": "^3.2",
+    "laravel/socialite": "^5.13",
     "laravel/tinker": "^2.8",
     "laraveles/spanish": "^1.5",
     "livewire/livewire": "^3.0",
-    "mercadopago/dx-php": "^3.0",
+    "mercadopago/dx-php": "2.6.2",
     "spatie/laravel-permission": "^6.3",
     "yajra/laravel-datatables-oracle": "^10.11"
   },
