--- a/package.json
+++ b/package.json
@@ -107,7 +107,7 @@
     "@simonwep/pickr": "1.9.0",
     "@yaireo/tagify": "4.18.2",
     "animate.css": "4.1.1",
-    "aos": "2.3.4",
+    "aos": "^2.3.4",
     "apexcharts-clevision": "3.28.5",
     "autosize": "6.0.1",
     "block-ui": "2.70.1",
