Fix datatable products

--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "perfect-scrollbar": "1.5.5",
     "plyr": "3.7.8",
     "quill": "1.3.7",
+    "quill-image-resize-module": "^3.0.0",
     "rateyo": "2.3.5",
     "select2": "4.0.13",
     "shepherd.js": "11.2.0",
