--- a/package.json
+++ b/package.json
@@ -122,15 +122,20 @@
     "chart.js": "4.4.1",
     "cleave.js": "1.6.0",
     "clipboard": "2.0.11",
-    "datatables.net-bs5": "1.13.8",
-    "datatables.net-buttons": "2.4.2",
-    "datatables.net-buttons-bs5": "2.4.2",
-    "datatables.net-fixedcolumns-bs5": "4.3.0",
-    "datatables.net-fixedheader-bs5": "3.4.0",
-    "datatables.net-responsive": "2.5.0",
-    "datatables.net-responsive-bs5": "2.5.0",
-    "datatables.net-rowgroup-bs5": "1.4.1",
-    "datatables.net-select-bs5": "1.7.0",
+    "datatables.net": "^1.13.10",
+    "datatables.net-bs5": "^1.13.10",
+    "datatables.net-buttons": "^2.4.2",
+    "datatables.net-buttons-bs5": "^2.4.2",
+    "datatables.net-fixedcolumns": "^4.3.0",
+    "datatables.net-fixedcolumns-bs5": "^4.3.0",
+    "datatables.net-fixedheader": "^3.4.0",
+    "datatables.net-fixedheader-bs5": "^3.4.0",
+    "datatables.net-responsive": "^2.5.0",
+    "datatables.net-responsive-bs5": "^2.5.0",
+    "datatables.net-rowgroup": "^1.4.1",
+    "datatables.net-rowgroup-bs5": "^1.4.1",
+    "datatables.net-select": "^1.7.0",
+    "datatables.net-select-bs5": "^1.7.0",
     "dropzone": "5.9.3",
     "flag-icons": "7.1.0",
     "flatpickr": "4.6.13",
@@ -138,7 +143,7 @@
     "highlight.js": "11.9.0",
     "jkanban": "1.3.1",
     "jquery": "3.7.1",
-    "jquery-datatables-checkboxes": "1.2.14",
+    "jquery-datatables-checkboxes": "^1.2.14",
     "jquery-sticky": "1.0.4",
     "jquery.repeater": "1.2.1",
     "jstree": "3.3.16",
